Form finally works passing data to webDataReader

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>What's the weather like?</title>
+    <title>Stock Prediction?</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
-                    What's the weather like?
+                    Stock Prediction
                 </h1>
             </div>
         </div>
@@ -21,18 +21,22 @@
         <div class="container">
             <div class="columns">
                 <div class="column is-offset-4 is-4">
-                    <form method="POST">
+                    
+                    <form  action="" method="post" > {% csrf_token %}
                         <div class="field has-addons">
                             <div class="control is-expanded">
-                                <input class="input" type="text" placeholder="City Name">
+                                <!--input class="input" type="text" placeholder="Stock Name" name="stock_name" value="{{stock_name}}"-->
+                                <input class="input" type="text" placeholder="Stock Name" name="stock_name" value="{{source.stock_name}}">
+                                
                             </div>
                             <div class="control">
-                                <button class="button is-info">
-                                    Add City
+                                <button class="button is-info" type="submit" value="Submit">
+                                    Predict Stock
                                 </button>
                             </div>
                         </div>
                     </form>
+
                 </div>
             </div>
         </div>
@@ -45,18 +49,19 @@
                         <article class="media">
                             <div class="media-left">
                                 <figure class="image is-50x50">
-                                    <img src="http://openweathermap.org/img/w/10d.png" alt="Image">
+                                    <img src="https://image.flaticon.com/icons/svg/66/66590.svg" alt="Image">
                                 </figure>
                             </div>
                             <div class="media-content">
                                 <div class="content">
                                     <p>
-                                        <span class="title">Las Vegas</span>
+                                        <span class="title">Stock Temperature</span>
                                         <br>
                                         <span class="subtitle">29° F</span>
                                         <br> thunderstorm with heavy rain
                                     </p>
-                                </div>
+
+                </div>
                             </div>
                         </article>
                     </div>
@@ -64,6 +69,18 @@
             </div>
         </div>
     </section>
+    {% block content %}
+    <p>Hi!</p>
+    
+    {% if open %}
+    <p>We are currently open!</p>
+    {% else %}
+    <p>We are currently closed! Feel free to contact us!</p>
+    {% endif %}
+    
+    {% endblock %}
+                    
+
     <footer class="footer">
     </footer>
 </body>
